WIP: Add Changes

--- a/teacher-portal/css/dashboard.css
+++ b/teacher-portal/css/dashboard.css
@@ -1,33 +1,25 @@
-.dashboard-main-holder {
-  width: 420px;
-  height: 460px;
-  overflow: unset;
+.dashboard {
+  min-width: 350px;
 }
-.dashboard-main-holder .envelope-holder {
-  text-align: center;
-  padding-bottom: 10px;
+.dashboard .dashboard-head {
+  border: 1px solid;
 }
-.dashboard-main-holder .account-board {
-  border: 1px solid #636363;
-  background-color: #eee;
-}
-.dashboard-main-holder .account-board .account-header {
-  font-size: 1.4rem;
-}
-.dashboard-main-holder .account-board .account-form {
-  width: 70%;
-  margin: auto;
-}
-.dashboard-main-holder .account-board .account-form .submit-button-container .btn {
+.dashboard .dashboard-head .lead-logo-container {
   width: 150px;
-  border: 1px solid #636363;
-  padding: 3px 3px;
+  height: 35px;
+  border: 1px solid;
+  margin: 5px;
+  line-height: 2;
 }
-.dashboard-main-holder .account-board .forgot-or-claim-account {
-  color: #00f;
-  text-decoration: underline;
-  cursor: pointer;
+.dashboard .dashboard-head .profile-info-container {
+  float: right;
+  margin: 5px;
+  line-height: 2;
 }
-.dashboard-main-holder .account-board .common-header-footer-margin {
-  margin: 20px 20px;
+.dashboard .dashboard-head .profile-info-container .profile-name-info {
+  margin-left: 15px;
+}
+.dashboard .dashboard-body {
+  border: 1px solid #000;
+  border-top: none;
 }
