--- a/teacher-portal/templates/student-datatable.handlebars
+++ b/teacher-portal/templates/student-datatable.handlebars
@@ -1,2 +1,2 @@
-<table id="dashboardTable" class="display table-bordered" cellspacing="0" width="100%">
+<table id="dashboardTable" class="display table-bordered" style="width:100%">
 </table>
