--- a/teacher-portal/templates/dashboard.handlebars
+++ b/teacher-portal/templates/dashboard.handlebars
@@ -12,9 +12,12 @@
                 <div class="list-group-item">Students</div>
                 <div class="list-group-item list-group-item-action view-students">- View Students</div>
                 <div class="list-group-item list-group-item-action add-student">- Add Student</div>
+                {{#times 50}}
+                    {{this}}
+                {{/times}}
             </div>
         </div>
-        <div class="students-view-container">
+        <div class="students-view-container d-inline-block">
         </div>
     </div>
 </div>
