--- a/teacher-portal/css/dashboard.styl
+++ b/teacher-portal/css/dashboard.styl
@@ -3,7 +3,7 @@
     .dashboard-head {
         border: 1px solid;
         .lead-logo-container {
-            width: 150px;
+            width: 194px;
             height: 35px;
             border: 1px solid;
             margin: 5px;
@@ -22,6 +22,7 @@
         border: 1px solid black;
         border-top: none;
         border-bottom: none;
+        min-width: 1080px;
         .students-control-container {
             vertical-align: text-top;
             height: 92vh;
