--- a/teacher-portal/templates/dashboard.handlebars
+++ b/teacher-portal/templates/dashboard.handlebars
@@ -17,7 +17,7 @@
                 {{/times}}
             </div>
         </div>
-        <div class="students-view-container d-inline-block">
+        <div class="students-view-container d-inline-block mt-3 ml-3">
         </div>
     </div>
 </div>
