--- a/teacher-portal/templates/student-datatable.handlebars
+++ b/teacher-portal/templates/student-datatable.handlebars
@@ -1,2 +1,4 @@
-<table id="dashboardTable" class="display table-bordered" style="width:100%">
-</table>
+<div class="student-search-panel"></div>
+<div class="data-table-container mt-4">
+    <table id="dashboardTable" class="display table-bordered" style="width:100%"></table>
+</div>
